lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-3.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { function func(a,b,c) a = 1; b = 2; end }\", |p| p.lua_block())"
---
LUA_CHUNK_EXPR: 0..46 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_FUNCTION_STMT: 6..44 
    IDENT: 6..14 "function"
    WHITESPACE: 14..15 
    LUA_NAME: 15..19 
      IDENT: 15..19 "func"
    LUA_PARAM_LIST: 19..26 
      L_PAREN: 19..20 "("
      LUA_PARAM: 20..21 
        LUA_NAME: 20..21 
          IDENT: 20..21 "a"
      COMMA: 21..22 ","
      LUA_PARAM: 22..23 
        LUA_NAME: 22..23 
          IDENT: 22..23 "b"
      COMMA: 23..24 ","
      LUA_PARAM: 24..25 
        LUA_NAME: 24..25 
          IDENT: 24..25 "c"
      R_PAREN: 25..26 ")"
    WHITESPACE: 26..27 
    LUA_STMT_EXPR: 27..33 
      LUA_MULTI_EXPR: 27..28 
        LUA_LIT_EXPR: 27..28 
          IDENT: 27..28 "a"
      WHITESPACE: 28..29 
      EQ: 29..30 "="
      WHITESPACE: 30..31 
      LUA_MULTI_EXPR: 31..32 
        LUA_LIT_EXPR: 31..32 
          INT: 31..32 "1"
      SEMI: 32..33 ";"
    WHITESPACE: 33..34 
    LUA_STMT_EXPR: 34..40 
      LUA_MULTI_EXPR: 34..35 
        LUA_LIT_EXPR: 34..35 
          IDENT: 34..35 "b"
      WHITESPACE: 35..36 
      EQ: 36..37 "="
      WHITESPACE: 37..38 
      LUA_MULTI_EXPR: 38..39 
        LUA_LIT_EXPR: 38..39 
          INT: 38..39 "2"
      SEMI: 39..40 ";"
    WHITESPACE: 40..41 
    IDENT: 41..44 "end"
  WHITESPACE: 44..45 
  R_BRACE: 45..46 "}"
