lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-4.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { function test.func(a,b,c) a = 1; b = 2; end }\", |p|\np.lua_block())"
---
LUA_BLOCK_EXPR: 0..51 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_FUNCTION_STMT: 6..50 
    IDENT: 6..14 "function"
    WHITESPACE: 14..15 
    LUA_NAME: 15..19 
      IDENT: 15..19 "test"
    DOT: 19..20 "."
    LUA_NAME: 20..24 
      IDENT: 20..24 "func"
    LUA_PARAM_LIST: 24..32 
      L_PAREN: 24..25 "("
      LUA_PARAM: 25..26 
        IDENT: 25..26 "a"
      COMMA: 26..27 ","
      LUA_PARAM: 27..28 
        IDENT: 27..28 "b"
      COMMA: 28..29 ","
      LUA_PARAM: 29..30 
        IDENT: 29..30 "c"
      R_PAREN: 30..31 ")"
      WHITESPACE: 31..32 
    LUA_BLOCK_STMT: 32..50 
      LUA_STMT_EXPR: 32..39 
        LUA_PREFIX_MULTI_EXPR: 32..34 
          LUA_LIT_EXPR: 32..34 
            IDENT: 32..33 "a"
            WHITESPACE: 33..34 
        EQ: 34..35 "="
        WHITESPACE: 35..36 
        LUA_MULTI_EXPR: 36..37 
          LUA_LIT_EXPR: 36..37 
            INT: 36..37 "1"
        SEMI: 37..38 ";"
        WHITESPACE: 38..39 
      LUA_STMT_EXPR: 39..46 
        LUA_PREFIX_MULTI_EXPR: 39..41 
          LUA_LIT_EXPR: 39..41 
            IDENT: 39..40 "b"
            WHITESPACE: 40..41 
        EQ: 41..42 "="
        WHITESPACE: 42..43 
        LUA_MULTI_EXPR: 43..44 
          LUA_LIT_EXPR: 43..44 
            INT: 43..44 "2"
        SEMI: 44..45 ";"
        WHITESPACE: 45..46 
      IDENT: 46..49 "end"
      WHITESPACE: 49..50 
  R_BRACE: 50..51 "}"
