lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-6.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { call(1)[1.5](2)[2.5](3); }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..32 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_STMT_EXPR: 6..31 
    LUA_MULTI_EXPR: 6..29 
      LUA_FIELD_CALL_EXPR: 6..29 
        LUA_FIELD_INDEX_EXPR: 6..26 
          LUA_FIELD_CALL_EXPR: 6..21 
            LUA_FIELD_INDEX_EXPR: 6..18 
              LUA_FIELD_CALL_EXPR: 6..13 
                LUA_LIT_EXPR: 6..10 
                  IDENT: 6..10 "call"
                LUA_ARG_LIST: 10..13 
                  L_PAREN: 10..11 "("
                  LUA_ARG: 11..12 
                    LUA_LIT_EXPR: 11..12 
                      INT: 11..12 "1"
                  R_PAREN: 12..13 ")"
              L_BRACKET: 13..14 "["
              LUA_LIT_EXPR: 14..17 
                FLOAT: 14..17 "1.5"
              R_BRACKET: 17..18 "]"
            LUA_ARG_LIST: 18..21 
              L_PAREN: 18..19 "("
              LUA_ARG: 19..20 
                LUA_LIT_EXPR: 19..20 
                  INT: 19..20 "2"
              R_PAREN: 20..21 ")"
          L_BRACKET: 21..22 "["
          LUA_LIT_EXPR: 22..25 
            FLOAT: 22..25 "2.5"
          R_BRACKET: 25..26 "]"
        LUA_ARG_LIST: 26..29 
          L_PAREN: 26..27 "("
          LUA_ARG: 27..28 
            LUA_LIT_EXPR: 27..28 
              INT: 27..28 "3"
          R_PAREN: 28..29 ")"
    SEMI: 29..30 ";"
    WHITESPACE: 30..31 
  R_BRACE: 31..32 "}"
