lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-7.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { local string = [[ hello there ]]; }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..41 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  IDENT: 6..11 "local"
  WHITESPACE: 11..12 
  EXPR_STMT: 12..40 
    BINARY_EXPR: 12..38 
      LIT_EXPR: 12..19 
        IDENT: 12..18 "string"
        WHITESPACE: 18..19 
      EQ: 19..20 "="
      WHITESPACE: 20..21 
      LIT_EXPR: 21..38 
        BRACKET_STRING: 21..38 "[[ hello there ]]"
    SEMI: 38..39 ";"
    WHITESPACE: 39..40 
  R_BRACE: 40..41 "}"
