lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-8.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { x = vec2.x.y.z; }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..23 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  EXPR_STMT: 6..22 
    BINARY_EXPR: 6..20 
      LIT_EXPR: 6..8 
        IDENT: 6..7 "x"
        WHITESPACE: 7..8 
      EQ: 8..9 "="
      WHITESPACE: 9..10 
      LUA_FIELD_ACCESS: 10..20 
        LUA_FIELD_ACCESS: 10..18 
          LUA_FIELD_ACCESS: 10..16 
            LIT_EXPR: 10..14 
              IDENT: 10..14 "vec2"
            DOT: 14..15 "."
            NAME: 15..16 
              IDENT: 15..16 "x"
          DOT: 16..17 "."
          NAME: 17..18 
            IDENT: 17..18 "y"
        DOT: 18..19 "."
        NAME: 19..20 
          IDENT: 19..20 "z"
    SEMI: 20..21 ";"
    WHITESPACE: 21..22 
  R_BRACE: 22..23 "}"
