lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-9.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { x.y = 1; }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..16 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  EXPR_STMT: 6..15 
    BINARY_EXPR: 6..13 
      LUA_FIELD_ACCESS: 6..10 
        LIT_EXPR: 6..7 
          IDENT: 6..7 "x"
        DOT: 7..8 "."
        NAME: 8..10 
          IDENT: 8..9 "y"
          WHITESPACE: 9..10 
      EQ: 10..11 "="
      WHITESPACE: 11..12 
      LIT_EXPR: 12..13 
        INT: 12..13 "1"
    SEMI: 13..14 ";"
    WHITESPACE: 14..15 
  R_BRACE: 15..16 "}"
