lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua {}\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..6 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  R_BRACE: 5..6 "}"
